[package]
name = "day14"
version = "0.1.0"
authors = ["Zwo1in <zwolin13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "*"
itertools = "*"
trees = "*"
env_logger = "*"
log = "*"

[dev-dependencies]
pretty_assertions = "*"
